--- a/everest.yaml
+++ b/everest.yaml
@@ -2,5 +2,5 @@
   Version: 1.7.3
   DLL: Code/bin/OutbackHelper.dll
   Dependencies:
-    - Name: Everest
+    - Name: EverestCore
       Version: 1.4465.0
